crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__reference-glossary-deprecated.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
An [](gls:API) call.
