crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__reference-key-digit-initial.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Cite @[7HA7H, p. 3] and @[see 1RgTv; -ko20].
