crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-aside-deprecated.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Hooke's law {margin}[linear only]{l} holds.
