crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-aside.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Hooke's law {margin}[linear only at small strain]{l} holds.
