crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-code.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Call `#!py print(1)` or `#!py print(1)` but never `rm -rf`.
