crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-index-deprecated.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Relativity {index:physics}[relativity].
