crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-index-suffix-deprecated.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Relativity {index}[relativity]{b} and {index}[Einstein][*papers*].
