crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-index-then-bracket.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
{index}[a]\[b] and {index}[c][d]\[e]
