crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-index.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Bytes {index}[endianness] and {index}[byte order][endianness] and {index}[chocolate]{b}.
