crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-inline-sugar.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Some ==marked==, ~~deleted~~, H~2~O, E=mc^2^, ++ctrl+alt+s++, **bold** and *emph*.
