crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__role-raw.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
A page break {latex}[\clearpage] here.

/// latex
\vspace{1cm}
///
